--- a/studylink-Folder/package.json
+++ b/studylink-Folder/package.json
@@ -18,5 +18,11 @@
     "express": "^5.1.0",
     "mssql": "^11.0.1",
     "mysql2": "^3.15.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4"
   }
 }
