--- a/studylink-Folder/package.json
+++ b/studylink-Folder/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.0"
   },
   "devDependencies": {
