--- a/studylink-Folder/package.json
+++ b/studylink-Folder/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "cd studylink-frontend && npm install && npm run build",
+    "build:frontend": "cd studylink-frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +14,6 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "better-sqlite3": "^12.4.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
@@ -20,6 +21,9 @@
     "mssql": "^11.0.1",
     "multer": "^2.0.2",
     "mysql2": "^3.15.0"
+  },
+  "optionalDependencies": {
+    "better-sqlite3": "^12.4.1"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
